--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,19 @@ body {
     outline: none;
 }
 
+.note-ghost {
+    opacity: 0.5;
+    background: #c8ebfb;
+}
+
+.note-chosen {
+    box-shadow: 0 0 0 2px var(--add-note-bg);
+}
+
+.note-drag {
+    opacity: 0.8;
+}
+
 .h-5, .h-6, .w-5, .w-6 {
     height: 1.25rem;
     width: 1.25rem;
